--- a/MainPage/CSS/Register_form.css
+++ b/MainPage/CSS/Register_form.css
@@ -9,10 +9,11 @@ body{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	background-color: aliceblue;
 }
 
 .page_Header{
-	width: auto;
+	width: 1920px;
 	height:50px;
 	background-color:#34495E;
 	line-height:50px;
@@ -21,7 +22,7 @@ body{
 }
 
 .page_Header .Account{
-	float:right;
+	float:left;
 }
 
 .page_Header .Account ul{
@@ -33,10 +34,11 @@ body{
 .page_Header .Account ul li{
 	display:inline-block;
 	border-left: 1px solid;
-	width: 199px;
+	width: 200px;
 	text-align: center;	
 }
 #Welcome{
+	margin-left: 910px;
 	width: 290px;
 }
 #Money{
@@ -48,46 +50,49 @@ body{
 	display:block;
 	font-size: 20px;
 }
-.page_Header .Account ul li a{
-	text-decoration:none;
-	color:white;
-	display:block;
-	font-size: 20px;
-}
-
 .page_Header .Account ul li a:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
-.page_Header .Account ul li #Login{
+.page_Header .Account ul li #Login_Button{
+	text-align: left;
 	text-decoration:none;
 	color:white;
 	font-size: 20px;
+	background-color:#34495E;
+	border: none;
 }
+#Login_Item{
+	margin-left: 1005px;
+}
+#Register_Item{
+}
+
 .page_Header .Account ul li #Login:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
 .nav_bar{
 	display: flex;
 	color: red;
-	width : 1365px;
+	width : 1920px;
 	height: 40px;
 	align-items: center;
-	background-color: yellow;
+	background-color: #4d6985;
 }
 .nav_bar a{
 	text-decoration: none;
 	flex-basis:20%;
-	border-right: 2px solid;
-	border-bottom: 2px solid;
+	border-right: 2px solid white;
+	border-bottom: 2px solid white;
 	line-height:40px;
 	justify-content: center;
+	color: white;
 }
 .nav_bar a:hover{
-	background-color: #77ceb1;
+	color:#1594fc;
 }
 .register{
 	display: flex;
@@ -96,18 +101,35 @@ body{
 	align-items: center;
 }
 .register{
+	width: 1920px;
 }
 .register .frmRegister{
 
 }
 .register .frmRegister .tblRegister{
-	text-align: right;
+	text-align: center;
 }
 .register .frmRegister .tblRegister td{
 	padding: 10px;
 }
 .register .frmRegister .button{
 	width:240px;
-	height: 30px;
+	height: 50px;
 	font-size: 20px;
+}
+input[type=submit],[type=reset]{
+	background-color: #4d6985;
+	border-radius: 5%;
+  	border: none;
+  	color: white;
+  	padding: 15px 32px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+  	margin: 4px 2px;
+  	cursor: pointer;
+}
+input[type=submit]:hover{
+	background-color: black;
 }
