--- a/MainPage/CSS/chitiet_SP.css
+++ b/MainPage/CSS/chitiet_SP.css
@@ -8,10 +8,12 @@ body{
 	font-size:18px;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
+	background-color: aliceblue;
 }
 
 .page_Header{
-	width: auto;
+	width: 1920px;
 	height:50px;
 	background-color:#34495E;
 	line-height:50px;
@@ -20,7 +22,7 @@ body{
 }
 
 .page_Header .Account{
-	float:right;
+	float:left;
 }
 
 .page_Header .Account ul{
@@ -32,10 +34,11 @@ body{
 .page_Header .Account ul li{
 	display:inline-block;
 	border-left: 1px solid;
-	width: 199px;
+	width: 200px;
 	text-align: center;	
 }
 #Welcome{
+	margin-left: 910px;
 	width: 290px;
 }
 #Money{
@@ -47,55 +50,58 @@ body{
 	display:block;
 	font-size: 20px;
 }
-.page_Header .Account ul li a{
-	text-decoration:none;
-	color:white;
-	display:block;
-	font-size: 20px;
-}
-
 .page_Header .Account ul li a:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
-.page_Header .Account ul li #Login{
+.page_Header .Account ul li #Login_Button{
+	text-align: left;
 	text-decoration:none;
 	color:white;
 	font-size: 20px;
+	background-color:#34495E;
+	border: none;
 }
+#Login_Item{
+	margin-left: 1005px;
+}
+#Register_Item{
+}
+
 .page_Header .Account ul li #Login:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
 .nav_bar{
 	display: flex;
 	color: red;
-	width : 1365px;
+	width : 1920px;
 	height: 40px;
 	align-items: center;
-	background-color: yellow;
+	background-color: #4d6985;
 }
 .nav_bar a{
 	text-decoration: none;
 	flex-basis:20%;
-	border-right: 2px solid;
-	border-bottom: 2px solid;
+	border-right: 2px solid white;
+	border-bottom: 2px solid white;
 	line-height:40px;
 	justify-content: center;
-	text-align: center;
+	color: white;
 }
 .nav_bar a:hover{
-	background-color: #77ceb1;
+	color:#1594fc;
 }
 .page_body{
-	margin-left: 50px;
-	margin-right: 30px;
+	width: 1920px;
+	align-items: center;
 }
 
 .page_body .hang_doc .hang_ngang{
 	display: flex;
+	justify-content: center;
 }
 .page_body .hang_doc .hang_ngang img{
 	width: 400px;
@@ -104,7 +110,10 @@ body{
 	flex-direction: column;
 	background-color: yellow;
 }
-
+.page_body .hang_doc .hang_ngang .Chi_tiet_SP{
+	padding-left: 100px;
+	width: 40%;
+}
 .page_body .hang_doc .hang_ngang .Chi_tiet_SP .ten_sp{
 	padding-top: 20px;
 	font-size: 40px;
@@ -134,14 +143,15 @@ body{
 	-moz-appearance: textfield;
 }
 .page_body .hang_doc .hang_ngang .Chi_tiet_SP #frmMua .gio_hang{
-	height: 40px;
+	height: 60px;
 	width: 200px;
 	
 }
 
 .page_body .hang_ngang2{
 	display: flex;
-	flex-direction: column:
+	width: 1920px;
+	padding-left: 25%;
 }
 .page_body .hang_ngang2 .gia_giam{
 	font-size:30px;
@@ -152,5 +162,20 @@ body{
 .page_body .hang_ngang2 .hang_doc2 p{
 	color: red;
 }
-
+input[type=submit]{
+	background-color: #4d6985;
+	border-radius: 5%;
+  	border: none;
+  	color: white;
+  	padding: 15px 32px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+  	margin: 4px 2px;
+  	cursor: pointer;
+}
+input[type=submit]:hover{
+	background-color: black;
+}
 
