--- a/MainPage/CSS/ManagePage.css
+++ b/MainPage/CSS/ManagePage.css
@@ -294,9 +294,10 @@ body{
 	width: 380px;
 }
 .hang_ngang .div_HoaDon .Details_HD_ngang .Chitiet_HD_header{
+	margin-top: 10px;
 	margin-left: 100px;
 	display: flex;
-	width: 1100px;
+	width: 1000px;
 	border-top: 2px black solid;
 	border-bottom: 2px black solid;
 	background-color: #6987a5;
@@ -325,8 +326,11 @@ body{
 .hang_ngang .div_HoaDon .Details_HD_ngang .Chitiet_HD{
 	margin-left: 100px;
 	display: flex;
-	width: 1100px;
+	width: 1000px;
 	border-bottom: 1px black solid;
+}
+.end{
+	margin-bottom: 10px;
 }
 .hang_ngang .div_HoaDon .Details_HD_ngang .Chitiet_HD .ID_LK{
 	width: 100px;
