--- a/MainPage/CSS/ManagePage.css
+++ b/MainPage/CSS/ManagePage.css
@@ -120,13 +120,12 @@ body{
 }
 .hang_ngang .thong_tin{
 	display: flex;
-	flex-direction: column;
-	background-color: #e8f4ff;
-	height: 260px;
-	width: 1200px;
-	margin-left: 2px;
-	align-items: center;
-	border: 1px black solid;
+    flex-direction: column;
+    background-color: #e8f4ff;
+    height: 320px;
+    width: 1200px;
+    margin-left: 2px;
+    border: 1px black solid;
 }
 .hang_ngang .thong_tin .div_edit_status{
 	display: flex;
@@ -145,7 +144,9 @@ body{
 	font-size: 22px;
 }
 .hang_ngang .thong_tin table .title{
-	text-align: right;
+	text-align: left;
+	width: 120px;
+	padding-left: 100px;
 }
 .hang_ngang .thong_tin table .info{
 	text-align: left;
