--- a/AdminPage/CSS/index.css
+++ b/AdminPage/CSS/index.css
@@ -9,10 +9,11 @@ body{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	background-color: aliceblue;
 }
 
 .page_Header{
-	width: auto;
+	width: 1920px;
 	height:50px;
 	background-color:#34495E;
 	line-height:50px;
@@ -21,7 +22,7 @@ body{
 }
 
 .page_Header .Account{
-	float:right;
+	float:left;
 }
 
 .page_Header .Account ul{
@@ -33,7 +34,7 @@ body{
 .page_Header .Account ul li{
 	display:inline-block;
 	border-left: 1px solid;
-	width: 199px;
+	width: 200px;
 	text-align: center;	
 }
 #Welcome{
@@ -50,37 +51,45 @@ body{
 }
 .page_Header .Account ul li a:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
-.page_Header .Account ul li #Login{
+.page_Header .Account ul li #Login_Button{
+	text-align: left;
 	text-decoration:none;
 	color:white;
 	font-size: 20px;
+	background-color:#34495E;
+	border: none;
+}
+#Login_Item{
+	margin-left: 1005px;
+}
+#Register_Item{
 }
 .page_Header .Account ul li #Login:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
-
 .nav_bar{
 	display: flex;
 	color: red;
-	width : 1365px;
+	width : 1920px;
 	height: 40px;
 	align-items: center;
-	background-color: yellow;
+	background-color: #4d6985;
 }
 .nav_bar a{
 	text-decoration: none;
-	flex-basis:25%;
-	border-right: 2px solid;
-	border-bottom: 2px solid;
+	flex-basis:20%;
+	border-right: 2px solid white;
+	border-bottom: 2px solid white;
 	line-height:40px;
 	justify-content: center;
+	color: white;
 }
 .nav_bar a:hover{
-	background-color: #77ceb1;
+	color:#1594fc;
 }
 .admin_content{
 	display: flex;
@@ -97,3 +106,104 @@ body{
 	line-height: 40px;
 	
 }
+.hidden{
+    visibility: hidden;
+}
+.login-container{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    background-color: rgba(21, 21, 21, 0.1);
+    z-index: 100;
+    color:#34495E;
+	
+	font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px;
+}
+
+.login-popup{
+    position: absolute;
+    width: 600px;
+    height: 600px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+}
+
+
+.login-input-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
+    align-items: center;
+}
+
+.login-input{
+    height: 50px;
+    width: 400px;
+    border: solid 1px #898989;
+    font-size: 25px;
+}
+
+.login-login-btn{
+    height: 50px;
+    width: 500px;
+    margin-top: 50px;
+    font-size: 25px;
+    color: white;
+    border-radius: 999px;
+    border:0;
+    background-color:#34495E;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.login-login-btn:hover{
+    border: 1px #34495E solid;
+    background-color: white;
+    color: black;
+    transition: .2s;
+}
+
+.login-forgot-password{
+    margin: 0;
+    margin-left: 325px;
+    margin-top: 20px;
+    font-size: 25px;
+}
+
+.login-no-account{
+    margin: 0;
+    font-size: 25px;
+    margin-top: 150px;
+}
+
+.login-no-account >button{
+    border: 0;
+    background-color: transparent;
+    text-decoration: underline;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.exit-btn{
+    position: absolute;
+    top: 20px;
+    left:530px;
+    width: 50px;
+    height: 50px;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+
