--- a/MainPage/CSS/chitiet_SP.css
+++ b/MainPage/CSS/chitiet_SP.css
@@ -73,7 +73,9 @@ body{
 	transition-duration:0s;
 	color:#1594fc;
 }
-
+.BuyNow_Button_Area{
+	margin-left: 150px;
+}
 .nav_bar{
 	display: flex;
 	color: red;
@@ -162,7 +164,7 @@ body{
 .page_body .hang_ngang2 .hang_doc2 p{
 	color: red;
 }
-input[type=submit]{
+input[type=submit],#BuyNow_Button{
 	background-color: #4d6985;
 	border-radius: 5%;
   	border: none;
@@ -175,6 +177,21 @@ input[type=submit]{
   	margin: 4px 2px;
   	cursor: pointer;
 }
+#BuyNow_Button{
+	background-color: #4d6985;
+	border-radius: 5%;
+  	border: none;
+  	color: white;
+  	padding: 15px 32px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+  	margin: 4px 2px;
+  	cursor: pointer;
+	width: 200px;
+}
+
 input[type=submit]:hover{
 	background-color: black;
 }
