chinh sua admin

--- a/AdminPage/CSS/QL_SP.css
+++ b/AdminPage/CSS/QL_SP.css
@@ -9,10 +9,11 @@ body{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	background-color: aliceblue;
 }
 
 .page_Header{
-	width: auto;
+	width: 1920px;
 	height:50px;
 	background-color:#34495E;
 	line-height:50px;
@@ -21,7 +22,7 @@ body{
 }
 
 .page_Header .Account{
-	float:right;
+	float:left;
 }
 
 .page_Header .Account ul{
@@ -33,10 +34,11 @@ body{
 .page_Header .Account ul li{
 	display:inline-block;
 	border-left: 1px solid;
-	width: 199px;
+	width: 200px;
 	text-align: center;	
 }
 #Welcome{
+	margin-left: 910px;
 	width: 290px;
 }
 #Money{
@@ -50,37 +52,45 @@ body{
 }
 .page_Header .Account ul li a:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
 
-.page_Header .Account ul li #Login{
+.page_Header .Account ul li #Login_Button{
+	text-align: left;
 	text-decoration:none;
 	color:white;
 	font-size: 20px;
+	background-color:#34495E;
+	border: none;
+}
+#Login_Item{
+	margin-left: 1005px;
+}
+#Register_Item{
 }
 .page_Header .Account ul li #Login:hover{
 	transition-duration:0s;
-	color:#D8A70C;
+	color:#1594fc;
 }
-
 .nav_bar{
 	display: flex;
 	color: red;
-	width : 1365px;
+	width : 1920px;
 	height: 40px;
 	align-items: center;
-	background-color: yellow;
+	background-color: #4d6985;
 }
 .nav_bar a{
 	text-decoration: none;
-	flex-basis:25%;
-	border-right: 2px solid;
-	border-bottom: 2px solid;
+	flex-basis:20%;
+	border-right: 2px solid white;
+	border-bottom: 2px solid white;
 	line-height:40px;
 	justify-content: center;
+	color: white;
 }
 .nav_bar a:hover{
-	background-color: #77ceb1;
+	color:#1594fc;
 }
 .admin_content{
 	display: flex;
@@ -126,32 +136,44 @@ body{
 	justify-content: center;
 	align-items: center;
 }
+.admin_content{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 1920px;
+}
 .admin_content .hang_ngang{
-	
+	justify-items: center;
 }
 .admin_content .hang_ngang .san_pham{
+	padding: 30px 0 30px 0px;
 	position: relative;
-	width: 300px;
-	height: 363px;
+	width: 400px;
+	height: 343px;
 	float: left;
 	flex-direction: column;
-	background-color: yellow;
+	margin-top: 20px;
+	text-align: center;
+	background-color:white;
+	margin-left: 20px;
+	margin-right: 50px;
+}
+.admin_content .hang_ngang .san_pham :hover{
+	opacity: 80%;
 }
 .admin_content .hang_ngang .san_pham .chitiet_sp{
 	text-decoration: none;
 	color: black;
 }
 .admin_content .hang_ngang .san_pham .chitiet_sp .gia_sp label{
-	position: absolute;
 	color: blue;
 	bottom: 0%;
-}
-.admin_content .hang_ngang .san_pham .chitiet_sp .ngung_ban{
-	color: red;
 }
 .admin_content .hang_ngang .san_pham .chitiet_sp .gia_giam{
 	color: blue;
 	font-size: 25px;
+	margin-top: 10px;
 }
 .admin_content .san_pham .chitiet_sp .img_sp{
 	position: relative;
@@ -159,14 +181,15 @@ body{
 	height: 250px;
 }
 .admin_content .san_pham .chitiet_sp .ten_sp{
-	text-align: left;
+	text-align: center;
 	overflow: hidden;
 	height: 41px;
 	display: -webkit-box;
-	-webkit-line-clamp: 2;
+	-webkit-line-clamp: 2; /* So dong hien thi */
 	-webkit-box-orient: vertical;
 }
 
+/* hiển thị tooltip */
 .admin_content .san_pham .chitiet_sp .ten_sp:before{
 	position: absolute;
     z-index: 2;
@@ -181,3 +204,4 @@ body{
 .admin_content .san_pham .chitiet_sp .ten_sp:hover:before{
 	display: inline-block;
 }
+/* kết thúc */
