--- a/MainPage/CSS/BuildPc.css
+++ b/MainPage/CSS/BuildPc.css
@@ -2,7 +2,12 @@
 	margin:0px;
 	padding:0px;
 }
-
+.hidden_input{
+	display: none;
+    width: 0px;
+    height: 0px;
+    border: 0px;
+}
 body{
 	font-family:Arial, Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 	font-size:18px;
