--- a/MainPage/CSS/buynow.css
+++ b/MainPage/CSS/buynow.css
@@ -61,7 +61,7 @@ input[type=address],#address{
 }
 .BuyNow_Button{
     position: absolute;
-    margin-top: 160px;
+    margin-top: 20px;
 }
 .buynow-input-container{
     display: flex;
@@ -91,8 +91,7 @@ input[type=address],#address{
 
 .buynow-buynow-btn:hover{
     border: 1px #34495E solid;
-    background-color: white;
-    color: white;
+    color: #1594fc;
     transition: .2s;
 }
 
