--- a/MainPage/CSS/chitiet_SP.css
+++ b/MainPage/CSS/chitiet_SP.css
@@ -74,7 +74,12 @@ body{
 	color:#1594fc;
 }
 .BuyNow_Button_Area{
-	margin-left: 150px;
+	display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    align-content: center;
+    height: 50px;
+    margin-top: -59px;
 }
 .nav_bar{
 	display: flex;
@@ -105,12 +110,17 @@ body{
 	display: flex;
 	justify-content: center;
 }
-.page_body .hang_doc .hang_ngang img{
+.page_body .hang_doc .hang_ngang .Info img{
 	width: 400px;
 	height: 318px;
 	float: left;
 	flex-direction: column;
 	background-color: yellow;
+}
+.Info{
+	display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .page_body .hang_doc .hang_ngang .Chi_tiet_SP{
 	padding-left: 100px;
@@ -136,6 +146,7 @@ body{
 	height: 40px;
 	font-size: 20px;
 	align-items: center;
+	border: none;
 }
 .page_body .hang_doc .hang_ngang .Chi_tiet_SP #frmMua .so_luong{
 	width: 50px;
@@ -143,6 +154,7 @@ body{
 	font-size: 20px;
 	text-align: center;
 	-moz-appearance: textfield;
+	border: none;
 }
 .page_body .hang_doc .hang_ngang .Chi_tiet_SP #frmMua .gio_hang{
 	height: 60px;
@@ -151,9 +163,8 @@ body{
 }
 
 .page_body .hang_ngang2{
+	margin-top: 20px;
 	display: flex;
-	width: 1920px;
-	padding-left: 25%;
 }
 .page_body .hang_ngang2 .gia_giam{
 	font-size:30px;
@@ -165,8 +176,8 @@ body{
 	color: red;
 }
 input[type=submit],#BuyNow_Button{
-	background-color: #4d6985;
-	border-radius: 5%;
+	background-color:#34495E;
+	border-radius: 10px;
   	border: none;
   	color: white;
   	padding: 15px 32px;
@@ -177,22 +188,55 @@ input[type=submit],#BuyNow_Button{
   	margin: 4px 2px;
   	cursor: pointer;
 }
+#BuyNow_Button:hover{
+	color: white;
+	background-color: #1594fc;
+}
+.Buynow_Button{
+	display: flex;
+    width: 600px;
+    flex-direction: row-reverse;
+    margin-top: -68px;
+}
 #BuyNow_Button{
-	background-color: #4d6985;
-	border-radius: 5%;
-  	border: none;
-  	color: white;
-  	padding: 15px 32px;
-  	text-align: center;
-  	text-decoration: none;
-  	display: inline-block;
-  	font-size: 16px;
-  	margin: 4px 2px;
-  	cursor: pointer;
-	width: 200px;
+	background-color:#34495E;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 200px;
+    height: 60px;
 }
 
 input[type=submit]:hover{
-	background-color: black;
+	color: white;
+	background-color: #1594fc;
+}
+.Quantity{
+	display: flex;
+	justify-content: center;
+}
+.Quantity_Input{
+	padding: 10px;
+    display: flex;
+    width: 150px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid gray;
+    border-radius: 10px;
+	background-color: white;	
+}
+.AddCart_Button{
+	width: 550px;
+	margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 
