fix css xbutton and hover login

--- a/MainPage/CSS/BuildPc.css
+++ b/MainPage/CSS/BuildPc.css
@@ -22,7 +22,10 @@ body{
 	text-align: center;
 	background-color: aliceblue;
 }
-
+.page_Header .Account ul li #Login_Button:hover {
+    cursor: pointer;
+    color: #1594fc;
+}
 .page_Header{
 	width: 1920px;
 	height:50px;
